Adding first feature: customer-login with stepdef and runner

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
+					<configuration>
+						<includes>
+							<include>RunCuke.java</include>
+						</includes>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
